HTML Page Created

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
             of his colleagues at CERN, an international scientific organization.
             Berners-Lee invented the World Wide Web in 1989 at CERN.
           </p>
-          <br /><a href="html.html" class="rm">Read More</a>
+          <br /><a href="page1.html" class="rm">Read More</a>
         </div>
         <div class="feature" id="f2">
           <h3 class="feature-header">CSS</h3>
