Updates to social media etc

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       <div class="box" id="nav">
         <ul class="main-nav">
           <li>
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
           </li>
           <li>
             <a href="#">About</a>
@@ -46,17 +46,19 @@
             of his colleagues at CERN, an international scientific organization.
             Berners-Lee invented the World Wide Web in 1989 at CERN.
           </p>
-          <br /><a href="page1.html" class="rm">Read More</a>
+          <br />
+          <h4><a href="page1.html" class="rm">Read More</a></h4>
         </div>
         <div class="feature" id="f2">
           <h3 class="feature-header">CSS</h3>
           <p>
-            The saga starts in 1994. Håkon Lie works at CERN and the Web is
-            starting to be used as a platform for electronic publishing. One
-            part of a publishing platform is missing: There is no way to style
-            documents.
+            CSS was first proposed by Hakon Wium Lie on October 10, 1994. At the
+            time, Lie was working with Tim Berners-Lee (father of Html) at CERN.
+            The European Organization for Nuclear Research is known as CERN.
+            Hakon wium lie is know as father of css.
           </p>
-          <br /><a href="#" class="rm">Read More</a>
+          <br />
+          <h4><a href="page2.html" class="rm">Read More</a></h4>
         </div>
         <div class="feature" id="f3">
           <h3 class="feature-header">JavaScript</h3>
@@ -65,7 +67,8 @@
             players like Netscape and Microsoft were in the midst of browser
             wars, with Navigator and Internet Explorer going head to head.
           </p>
-          <br /><a href="#" class="rm">Read More</a>
+          <br />
+          <h4><a href="#" class="rm">Read More</a></h4>
         </div>
         <div class="feature" id="f4">
           <h3 class="feature-header">React</h3>
@@ -74,7 +77,8 @@
             the market. It came into existence in 2011, when Jordan Walke, a
             software engineer at Facebook created the library.
           </p>
-          <br /><a href="#" class="rm">Read More</a>
+          <br />
+          <h4><a href="#" class="rm">Read More</a></h4>
         </div>
       </div>
       <div class="box" id="b3">
@@ -124,7 +128,7 @@
         </article>
       </div>
       <div class="box" id="b4">
-        <h5>© Luke Ryan Development 2021</h5>
+        <h4>© Luke Ryan Development 2021</h4>
       </div>
     </div>
   </body>
