Index, Page1, Page2 with their CSS' complete.

--- a/src/page1.html
+++ b/src/page1.html
@@ -66,14 +66,14 @@
         <div class="author-nav">
           <img src="resources/images/html.jpg" alt="html lady">
             <div class="author-info">
-              <p><h4>Name:</h4>
+              <h4>Name:</h4>
               Clare Badger<br><br>
               <h4>Title:</h4>
               Explorer <br><br>
               <h4>Current Company:</h4>
               Unemployed<br><br>
               <h4>Short Bio:</h4>
-              Clare likes to explore the W3.<br><br></p>
+              Clare likes to explore the W3, as well as other countries. She wrote this HTML piece.<br><br>
             </div>
           <div class="icons">    
             <ion-icon name="logo-facebook" id="fb"></ion-icon>
