--- a/src/page2.html
+++ b/src/page2.html
@@ -41,7 +41,7 @@
       <div class="box" id="b2">
         <div class="feature" id="f1">
           <h3 class="feature-header">CSS</h3>
-          <p>
+          
             <h5>Origin Story</h5>
             CSS was first proposed by Hakon Wium Lie on October 10, 1994. At the time, 
             Lie was working with Tim Berners-Lee (father of Html) at CERN. The European Organization 
@@ -63,41 +63,37 @@
             <h5>The Ongoing Journey</h5>
             CSS3 was started in 1998 but it has never been completed. Some parts are still being developed and some components
              work on some browsers. It published in June 1999. CSS 3 is divided into several separate documents called “modules”. 
-             Each module adds new capabilities or extends features defined in CSS 2            
-            
-          </p>
+             Each module adds new capabilities or extends features defined in CSS 2                        
           <br /><h4><a href="index.html" class="rm">Back to Homepage</a></h4>
         </div>
       </div>
       <div class="box" id="b3">
         <article class="author">
           <h3 class="author-head">Author</h3>
-          <div class="author-nav">
-<img src="resources/images/css.jpg" alt="css man">
-<div class="author-info"><p> <h4>Name:</h4>
-    John Ostrich<br><br>
-    <h4>Title:</h4>
-    Tester <br><br>
-    <h4>Current Company:</h4>
-    Radeon<br><br>
-    <h4>Short Bio:</h4>
-    John likes to contribute to the History of Web Development blog.<br><br>
+        <div class="author-nav">
+              <img src="resources/images/css.jpg" alt="css man">
+        <div class="author-info"><p> <h4>Name:</h4>
+        John Ostrich<br><br>
+        <h4>Title:</h4>
+        Tester <br><br>
+        <h4>Current Company:</h4>
+        Radeon<br><br>
+        <h4>Short Bio:</h4>
+        John likes to contribute to the History of Web Development blog.<br><br>
     <div class="icons">    
         <ion-icon name="logo-facebook" id="fb"></ion-icon>
         <ion-icon name="logo-twitter" id="tw"></ion-icon>
-        <ion-icon name="logo-instagram" id="ig"></ion-icon> 
+        <ion-icon name="logo-instagram" id="ig"></ion-icon> </p>
       </div>    
   </div>
- </p>
-</div></div>
+ 
+</div>
         </article>
       </div>
       <div class="box" id="b4">
         <h4>© Luke Ryan Development 2021</h4>
       </div>
     </div>
-
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
-
   </body>
 </html>
