--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,11 @@
     <link
       rel="stylesheet"
       type="text/css"
+      href="../src/resources/css/queries.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
