Updated Media for links

--- a/src/page2.html
+++ b/src/page2.html
@@ -13,6 +13,11 @@
       href="../src/resources/css/page2.css"
     />
     <link
+    rel="stylesheet"
+    type="text/css"
+    href="../src/resources/css/queries2.css"
+  />
+    <link
       rel="stylesheet"
       type="text/css"
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap"
@@ -63,8 +68,8 @@
             <h5>The Ongoing Journey</h5>
             CSS3 was started in 1998 but it has never been completed. Some parts are still being developed and some components
              work on some browsers. It published in June 1999. CSS 3 is divided into several separate documents called “modules”. 
-             Each module adds new capabilities or extends features defined in CSS 2                        
-          <br /><h4><a href="index.html" class="rm">Back to Homepage</a></h4>
+             Each module adds new capabilities or extends features defined in CSS 2.                        
+             <br /><br /><h4><a href="index.html" class="rm">Back to Homepage</a></h4>
         </div>
       </div>
       <div class="box" id="b3">
