--- a/src/page1.html
+++ b/src/page1.html
@@ -12,6 +12,11 @@
       type="text/css"
       href="../src/resources/css/page1.css"
     />
+        <link
+      rel="stylesheet"
+      type="text/css"
+      href="../src/resources/css/queries1.css"
+    />
     <link
       rel="stylesheet"
       type="text/css"
