Structure Change of Review

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
             Berners-Lee invented the World Wide Web in 1989 at CERN.
           </p>
           <br />
-          <h4><a href="page1.html" class="rm">Read More</a></h4>
+          <h4>
+            <a href="/src/resources/html/page1.html" class="rm">Read More</a>
+          </h4>
         </div>
         <div class="feature" id="f2">
           <h3 class="feature-header">CSS</h3>
@@ -62,7 +64,9 @@
             The European Organization for Nuclear Research is known as CERN.
           </p>
           <br />
-          <h4><a href="page2.html" class="rm">Read More</a></h4>
+          <h4>
+            <a href="/src/resources/html/page2.html" class="rm">Read More</a>
+          </h4>
         </div>
         <div class="feature" id="f3">
           <h3 class="feature-header">JavaScript</h3>
