--- a/src/resources/html/page1.html
+++ b/src/resources/html/page1.html
@@ -10,12 +10,12 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="../src/resources/css/page1.css"
+      href="/src/resources/css/page1.css"
     />
         <link
       rel="stylesheet"
       type="text/css"
-      href="../src/resources/css/queries1.css"
+      href="/src/resources/css/queries1.css"
     />
     <link
       rel="stylesheet"
@@ -62,14 +62,14 @@
             
             
           </p>
-          <br /><h4><a href="index.html" class="rm">Back to Homepage</a></h4>
+          <br /><h4><a href="../../../index.html" class="rm">Back to Homepage</a></h4>
         </div>
       </div>
       <div class="box" id="b3">
         <article class="author">
           <h3 class="author-head">Author</h3>
         <div class="author-nav">
-          <img src="resources/images/html.jpg" alt="html lady">
+          <img src="/src/resources/images/html.jpg" alt="html lady">
             <div class="author-info">
               <h4>Name:</h4>
               Clare Badger<br><br>
