--- a/src/resources/html/page2.html
+++ b/src/resources/html/page2.html
@@ -10,12 +10,12 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="../src/resources/css/page2.css"
+      href="/src/resources/css/page2.css"
     />
     <link
     rel="stylesheet"
     type="text/css"
-    href="../src/resources/css/queries2.css"
+    href="/src/resources/css/queries2.css"
   />
     <link
       rel="stylesheet"
@@ -69,14 +69,14 @@
             CSS3 was started in 1998 but it has never been completed. Some parts are still being developed and some components
              work on some browsers. It published in June 1999. CSS 3 is divided into several separate documents called “modules”. 
              Each module adds new capabilities or extends features defined in CSS 2.                        
-             <br /><br /><h4><a href="index.html" class="rm">Back to Homepage</a></h4>
+             <br /><br /><h4><a href="../../../index.html"  class="rm">Back to Homepage</a></h4>
         </div>
       </div>
       <div class="box" id="b3">
         <article class="author">
           <h3 class="author-head">Author</h3>
         <div class="author-nav">
-              <img src="resources/images/css.jpg" alt="css man">
+              <img src="/src/resources/images/css.jpg" alt="css man">
         <div class="author-info"><p> <h4>Name:</h4>
         John Ostrich<br><br>
         <h4>Title:</h4>
