Updated for review

--- a/index.html
+++ b/index.html
@@ -47,46 +47,58 @@
         <div class="feature" id="f1">
           <h3 class="feature-header">HTML</h3>
           <p>
-            Tim Berners-Lee was the primary author of HTML, with the assistance
-            of his colleagues at CERN, an international scientific organization.
-            Berners-Lee invented the World Wide Web in 1989 at CERN.
+            <em>Tim Berners-Lee</em> was the primary author of
+            <strong>HTML</strong>, with the assistance of his colleagues at
+            CERN, an international scientific organization. Berners-Lee invented
+            the World Wide Web in 1989 at CERN.
           </p>
           <br />
           <h4>
-            <a href="/src/resources/html/page1.html" class="rm">Read More</a>
+            <a href="/src/resources/html/page1.html" class="rm"
+              ><button>Read More</button></a
+            >
           </h4>
         </div>
         <div class="feature" id="f2">
           <h3 class="feature-header">CSS</h3>
           <p>
-            CSS was first proposed by Hakon Wium Lie on October 10, 1994. At the
-            time, Lie was working with Tim Berners-Lee (father of Html) at CERN.
-            The European Organization for Nuclear Research is known as CERN.
+            <strong>CSS</strong> was first proposed by
+            <em>Hakon Wium Lie</em> on October 10, 1994. At the time, Lie was
+            working with Tim Berners-Lee (father of Html) at CERN. The European
+            Organization for Nuclear Research is known as CERN.
           </p>
           <br />
           <h4>
-            <a href="/src/resources/html/page2.html" class="rm">Read More</a>
+            <a href="/src/resources/html/page2.html" class="rm"
+              ><button>Read More</button></a
+            >
           </h4>
         </div>
         <div class="feature" id="f3">
           <h3 class="feature-header">JavaScript</h3>
           <p>
             The early to mid-1990s was an important time for the internet. Key
-            players like Netscape and Microsoft were in the midst of browser
-            wars, with Navigator and Internet Explorer going head to head.
+            players like <u>Netscape</u> and <u>Microsoft</u> were in the midst
+            of browser wars, with Navigator and Internet Explorer going head to
+            head.
           </p>
           <br />
-          <h4><a href="#" class="rm">Read More</a></h4>
+          <h4>
+            <a href="#" class="rm"><button>Read More</button></a>
+          </h4>
         </div>
         <div class="feature" id="f4">
           <h3 class="feature-header">React</h3>
           <p>
-            React is a new technology when compared with other technologies in
-            the market. It came into existence in 2011, when Jordan Walke, a
-            software engineer at Facebook created the library.
+            <strong>React</strong> is a new technology when compared with other
+            technologies in the market. It came into existence in 2011, when
+            <em>Jordan Walke</em>, a software engineer at Facebook created the
+            library.
           </p>
           <br />
-          <h4><a href="#" class="rm">Read More</a></h4>
+          <h4>
+            <button><a href="#" class="rm">Read More</a></button>
+          </h4>
         </div>
       </div>
       <div class="box" id="b3">
@@ -136,7 +148,7 @@
         </article>
       </div>
       <div class="box" id="b4">
-        <h4>© Luke Ryan Development 2021</h4>
+        <h2>© Luke Ryan Development 2021</h2>
       </div>
     </div>
   </body>
