--- a/src/resources/html/page1.html
+++ b/src/resources/html/page1.html
@@ -48,9 +48,9 @@
           <h3 class="feature-header">HTML</h3>
           <p>
             <h5>Definition of HTML</h5>
-            HTML is the authoring language used to create documents on the web. 
+            <q>HTML is the authoring language used to create documents on the web. 
             It is used to define the structure and layout of a web page, how a page looks, and any special functions. 
-            HTML does this by using what are called tags that have attributes.            As the viewer of a web page, you don't see HTML; it is hidden from your view. You see only the results.
+            HTML does this by using what are called tags that have attributes.            As the viewer of a web page, you don't see HTML; it is hidden from your view. You see only the results.</q>
             
             <h5>Vannevar Bush</h5>
             Vannevar Bush was an engineer born at the end of the 19th century. By the 1930s he was working on analog computers and in 1945 wrote the article "As We May Think," published in the Atlantic Monthly. In it, he describes a machine he called memex, which would store and retrieve information via microfilm. It would consist of screens (monitors), a keyboard, buttons, and levers. The system he discussed in this article is very similar to HTML, and he called the links between various pieces of information associative trails. This article and theory laid the foundation for Tim Berners-Lee and others to invent the World Wide Web, HTML (hypertext markup language), HTTP (HyperText Transfer Protocol), and URLs (Universal Resource Locators) in 1990. Bush died in 1974 before the web existed or the internet became widely known, but his discoveries were seminal.
@@ -70,6 +70,7 @@
           <h3 class="author-head">Author</h3>
         <div class="author-nav">
           <img src="/src/resources/images/html.jpg" alt="html lady">
+          <figcaption>Fig1. Clare</figcaption>
             <div class="author-info">
               <h4>Name:</h4>
               Clare Badger<br><br>
@@ -89,7 +90,7 @@
         </article>
       </div>
       <div class="box" id="b4">
-        <h4>© Luke Ryan Development 2021</h4> 
+        <h2>© Luke Ryan Development 2021</h2> 
       </div>
     </div>
 
