--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="../src/resources/css/style.css"
+      href="/src/resources/css/style.css"
     />
     <link
       rel="stylesheet"
       type="text/css"
-      href="../src/resources/css/queries.css"
+      href="/src/resources/css/queries.css"
     />
     <link
       rel="stylesheet"
