Updated Relative Paths

--- a/index.html
+++ b/index.html
@@ -7,15 +7,11 @@
       content="width=device-width, initial-scale=1, maxium-scale=1"
       name="viewport"
     />
+    <link rel="stylesheet" type="text/css" href="src/resources/css/style.css" />
     <link
       rel="stylesheet"
       type="text/css"
-      href="/src/resources/css/style.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="/src/resources/css/queries.css"
+      href="src/resources/css/queries.css"
     />
     <link
       rel="stylesheet"
