--- a/src/resources/html/page1.html
+++ b/src/resources/html/page1.html
@@ -29,7 +29,7 @@
       <div class="box" id="nav">
         <ul class="main-nav">
           <li>
-            <a href="index.html">Home</a>
+            <a href="../../../index.html">Home</a>
           </li>
           <li>
             <a href="#">About</a>
